Move to Django 1.11: FAILED (failures=16, errors=43, skipped=29)

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,9 +19,6 @@
 [submodule "django-filemanager"]
 	path = dependencies/django-filemanager
 	url = https://github.com/znick/django-filemanager.git
-[submodule "django-jfu"]
-	path = django-jfu
-	url = https://github.com/UmSenhorQualquer/django-jfu.git
 [submodule "dependencies/django-jfu"]
 	path = dependencies/django-jfu
-	url = https://github.com/UmSenhorQualquer/django-jfu.git
+	url = https://github.com/brogency/django-jfu.git
